--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -101,7 +101,7 @@ DIST_DOCS = $(DVIOBJ) $(PSOBJ) $(HTMLOBJ) $(INFOOBJ) $(TEXTOBJ) $(PDFOBJ)
 	$(RM) $@
 	-${DVIPDF} $<
 
-all: info dvi html ps text pdf
+all: info html
 nodvi: info html text
 
 xdist: $(DIST_DOCS)
