--- a/packaging/baselibs.conf
+++ b/packaging/baselibs.conf
@@ -1,6 +1,6 @@
-libreadline5
+libreadline
   obsoletes "readline-<targettype> <= <version>"
   provides "readline-<targettype> = <version>"
-readline5-devel
- requires -readline5-<targettype>
- requires "libreadline5-<targettype> = <version>"
+readline-devel
+ requires -readline-<targettype>
+ requires "libreadline-<targettype> = <version>"
